post.md: reordered and made sure that front matter is accurate updated styles.css heading to make sure that discard comments only kept colophon and not table of contents..leaving that in the source file renamed trumps.modification.css to trumps.modify.css

--- a/themes/tpvs16/src/css/style.css
+++ b/themes/tpvs16/src/css/style.css
@@ -1,11 +1,13 @@
 /*!  
 =================================
 Website by RJ Lewis 
-Created 2015.12.10
-Last updated 2015.12.11
-  - Build: RJLewisDesign/Sites/*****
-BG Pattern(***[http://subtlepatterns.com/?s=****])
-  Courtesy of: subtlepatterns.com
+Created 2016.2.26
+Last updated 2016.3.4
+=================================
+*/
+/*
+=================================
+- Build: RJLewisDesign/Sites/tpvsports
 =================================
 Contents:
   01  Settings
@@ -37,6 +39,7 @@ Contents:
       - Page List...Styling for printed collection lists
   06  Trumps
       - Responsive..Grid helper classes
+      - Modify......Modifyer Classes
 =================================
 */
 
@@ -77,6 +80,6 @@ Contents:
   @import 'partials/_components.taxonomies';
 
 /*@import trumps*/
-  @import 'partials/_trumps.modification';
+  @import 'partials/_trumps.modify';
   /*@import 'partials/_trumps.responsive';*/
   @import 'partials/_trumps.twitter';
