updated the date widget and added the cms.js script tag and made the date widget a date time control also updated partials to accept date instead of publish date in the templates

--- a/layouts/podcast/list.html
+++ b/layouts/podcast/list.html
@@ -4,7 +4,7 @@
   </div>
   <div class="o-list__meta c-article-list__colophon">
     <i class="fa fa-calendar-check-o"></i>
-    <time> {{ dateFormat "Mon 2 Jan 2006" .PublishDate }}</time> <i class="fa fa-file-text-o"></i> <a href="{{ .Permalink }}">{{ .Title }}</a>
+    <time> {{ dateFormat "Mon 2 Jan 2006" .Date }}</time> <i class="fa fa-file-text-o"></i> <a href="{{ .Permalink }}">{{ .Title }}</a>
   </div>
 </li>
   
