--- a/themes/tpvs16/src/css/style.css
+++ b/themes/tpvs16/src/css/style.css
@@ -73,7 +73,7 @@ Contents:
   /*@import 'partials/_components.bands';*/
   /*@import 'partials/_components.buttons';*/
   @import 'partials/_components.masthead';
-  /*@import 'partials/_components.page-foot';*/
+  @import 'partials/_components.page-foot';
   @import 'partials/_components.page-head';
   @import 'partials/_components.page-list';
   @import 'partials/_components.site-nav';
