updated mobile style with slicknav - refined other styles and altered markup to fit

--- a/themes/tpvs16/src/css/partials/_components.page-foot.css
+++ b/themes/tpvs16/src/css/partials/_components.page-foot.css
@@ -1,8 +1,15 @@
 .social {
   font-size: responsive 2rem 2.5rem;
+  text-align: center;
   & a {
     border-bottom: none;
   }
+  @media (--large) {
+    text-align: left;
+  }
+}
+.copyright {
+  text-align: center;
   @media (--large) {
     text-align: right;
   }
