--- a/themes/tpvs16/src/css/partials/_components.site-nav.css
+++ b/themes/tpvs16/src/css/partials/_components.site-nav.css
@@ -5,6 +5,9 @@
 }
 .menubar {
   text-align: right;
+  @media (--small) {
+    @mixin visuallyhidden;
+  }
 }
 .menubar__item {
   display: inline-block;
