--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,16 +1,18 @@
   <footer class="top page__footer" role="banner">
-    <div class="copyright footer__half" data-layout="u-1/2@lg">
-      {{ partial "copyright.html" . }}
-    </div>
     <div class="social footer__half" data-layout="u-1/2@lg">
       {{ partial "socialize" . }}
+    </div>
+    <div class="copyright footer__half" data-layout="u-1/2@lg">
+      {{ partial "copyright.html" . }}
     </div>
     <div class="footer_whole">
       
     </div>
   </footer>
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script> 
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+    <script src="/js/vendor/jquery.slicknav.js"></script>
+    <script src="/js/app.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
