--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,6 +7,7 @@
       <meta name="description" content="{{ .Description }}">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="apple-touch-icon" href="apple-touch-icon.png">
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
       <!-- Place favicon.ico in the root directory -->
       <link href='https://fonts.googleapis.com/css?family=Arya|Lato:400,300,700|Emblema+One' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
