--- a/themes/tpvs16/src/css/partials/_components.page-list.css
+++ b/themes/tpvs16/src/css/partials/_components.page-list.css
@@ -1,6 +1,8 @@
 .c-article-list__item {
+  border-bottom: 1px solid white;
   font-size: 75%;
   padding-bottom: 10px;
+  margin-bottom: 30px;
 }
 .c-article-list__colophon {
   padding-top: 10px;
@@ -30,12 +32,16 @@
 }
 .c-article-list__item--archive {
   margin-left: 50px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  padding-bottom: 50px;
+  &:not(:last-of-type) {
+   border-bottom: 1px solid white; 
+  }
 }
 .c-section-list {
   font-size: responsive 1rem 1.5rem;
 
-  &  time {
+  & time {
     /*font-size: responsive 0.85rem 1rem;*/
     line-height: 2;
     margin-left: 23px;
