--- a/themes/tpvs16/src/css/partials/_trumps.twitter.css
+++ b/themes/tpvs16/src/css/partials/_trumps.twitter.css
@@ -1,3 +1,6 @@
 .timeline, .thm-dark {
   background-color: transparent !important;
 }
+a.u-floatRight, a.u-floatLeft, a.customisable-highlight {
+  color: #f1e01d !important;
+}
