--- a/layouts/podcast/single.html
+++ b/layouts/podcast/single.html
@@ -11,7 +11,7 @@
         <time> {{ .Params.publishdate }}</time>
       </div>
       <div class="o-article__description">
-        {{ .Description }}
+        {{ .Description | markdownify }}
       </div>
       <div class="embed o-article__media">
         {{ partial "soundcloud.html" . }}
